Updated a liniop to be stacked

--- a/README
+++ b/README
@@ -1,3 +1,4 @@
+Code and data for 
 
 
 1. Create docker container using provided Dockerfile. Most convenient is to use VSCode with DevContainers extensions
